website/themes/alexa-portfolio/assets/sass/main.scss
/* ... */
.nav__list{
    grid-template-columns: repeat(3,1fr);
    gap: 2rem;
}
.nav__link{
    display: flex;
    flex-direction: column;
    align-items: center;
    font-size: var(--small-font-size);
    color: var(--title-color);
    font-weight: var(--font-medium);
}
.nav__link:hover{
    color: var(--first-color);
}
.nav__icon{
    font-size: 1.2rem;
}
.nav__close{
    position: absolute;
    right: 1.3rem;
    bottom: .5rem;
    font-size: 1.5rem;
    cursor: pointer;
    color: var(--first-color);
}
.nav__close:hover{
    color:var(--first-color-alt);
}
/* show menu */
.show-menu{
    bottom: 0;
}

/* Active link */


/* Change background header */


/*==================== HOME ====================*/
.home{
    overflow: hidden;   
}
.home__container{
    gap: 1rem;
}
.home__content{
    grid-template-columns: .5fr 3fr;
    padding-top: 3.5rem;
    align-items: center;
}
.home__social{
    display: grid;
    grid-template-columns: max-content;
    row-gap: 1rem;
}
.home__social-icon{
    font-size: 1.25rem;
    color: var(--first-color);
}
.home__social-icon:hover{
    color: var(--first-color-alt);
}
.home__blob{
    width: 200px;
    fill: var(--first-color);
}

.home__data{
    grid-column: 1/3;
}
.home__title{
    font-size: var(--big-font-size);
}
.home__subtitle{
    font-size: var(--h3-font-size);
    color: var(--text-color);
    font-weight: var(--font-medium);
    margin-bottom: var(--mb-0-75);
}
.home__description{
    margin-bottom: var(--mb-2);
}
.home__scroll{
    display: none;
}
.home__scroll-button{
    color: var(--first-color);
    transition: .3s;
}
.home__scroll-button:hover{
    transform: translateY(.25rem);
}
.home__scroll-mouse{
    font-size: 2rem;
}
.home__scroll-name{
    font-size: var(--small-font-size);
    color: var(--title-color);
    font-weight: var(--font-medium);
    margin-right: var(--mb-0-25);
}
.home__scroll-arrow{
    font-size: 1.25rem;
}


/*==================== BUTTONS ====================*/
.button{
    display: inline-block;
    background-color: var(--first-color);
    color: #fff;
    padding: 1rem;
    border-radius: .5rem;
    font-weight: var(--font-medium);
    border: none;
}
.button__border{
    background-color: var(--container-color);
    border: 1px solid #000;
    padding: 10px 30px;
    border-radius: 0;
    color: #000;
    font-size: 16px;
    padding: .5rem 2rem;
    font-weight: normal;
}
.button:hover{
    background-color: var(--first-color-alt);
}
.button__border:hover{
    background-color: #000;
    color: var(--container-color);
}
.button__icon{
    font-size: 1.25rem;
    margin-left: var(--mb-0-5);
    transition: .3s;
}
.button--flex{
    display: inline-flex;
    align-items: center;
}
/*==================== ABOUT ====================*/


/*==================== SKILLS ====================*/


/*==================== QUALIFICATION ====================*/
.qualification__data{
    display: grid;
    grid-template-columns: 1fr max-content 1fr;
    column-gap: 1.5rem;
}
.qualification__title{
    font-size: var(--normal-font-size);
    font-weight: var(--font-medium);
}
.qualification__subtitle{
    display: inline-block;
    font-size: var(--small-font-size);
}
.qualification__calendar{
    font-size: var(--smaller-font-size);
    color:var(--text-color-light)
}
.qualification__rounder{
    display: inline-block;
    width: 13px;
    height: 13px;
    background-color: var(--first-color);
    border-radius: 50%;
} 
.qualification__line{
    display: block;
    width: 1px;
    height: 100%;
    background-color: var(--first-color);
    transform: translate(6px ,-7px);
}
/*==================== SERVICES ====================*/


/* Active Modal */


/*==================== PORTFOLIO ====================*/

/*work section*/
.work__subtitle{
    max-width: 600px;
    padding: 0 .75rem;
    margin: 0 auto;    
}
.work__container{
    max-width: 640px;
    margin-bottom: var(--mb-1);
    p {
        margin-bottom: var(--mb-1);
    }
}

/*==================== PROJECT IN MIND ====================*/


/*==================== TESTIMONIAL ====================*/


/*==================== CONTACT ME ====================*/
.contact__container{
    row-gap: 3rem;
}
.contact__information{
    display: flex;
    margin-bottom: var(--mb-2);
}
.contact__icon{
    font-size: 2rem;
    color: var(--first-color);
    margin-right: var(--mb-0-75);
}
.contact__title{
    font-size: var(--h3-font-size);
    font-weight: var(--font-medium);
}
.contact__subtitle{
    font-size: var(--small-font-size);
    color: var(--text-color-light);
}
.contact__content{ 
    background-color: var(--input-color);
    border-radius: .5rem;
    padding: .75rem 1rem .25rem;
}
.contact__label{
    font-size: var(--smaller-font-size);
    color:var(--title-color);
}
.contact__input{
    width: 100%;
    background-color: var(--input-color);
    color: var(--text-color);
    font-family: var(--body-font);
    font-size: var(--normal-font-size);
    border:none;
    outline: none;
    padding: .25rem .5rem .5rem 0;

}

/*==================== FOOTER ====================*/


/*========== SCROLL UP ==========*/


/* Show scroll */


/*========== SCROLL BAR ==========*/


/*==================== MEDIA QUERIES ====================*/
/* For small devices */
@media screen and (min-width:350px){
    .container{
        margin-left: var(--mb-1);
        margin-right: var(--mb-1);
    }
    .nav__menu{
        padding: 2rem .25rem 4rem;
    }
    .nav__list{
        column-gap: 0;
    }
    .home__content{
        grid-template-columns: .25fr 3fr;
    }
    /* Make home image responsive by default */
    .home__img{
        width: 100%;
    }
    .home__blob-img{
        display: block;
        width: 100%;
        max-width: 100%;
        height: auto;
    }
    .home__blob{
        width: 180px;
    }
    .qualification__data{
        gap: .5rem;
        justify-items: center;
    }
}
/* ... */

